--- a/code/cleaning.ipynb
+++ b/code/cleaning.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "id": "a66eba8d-6de0-463b-9fe3-77583092784d",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "id": "89b2ff55-e325-4ddb-8a7a-04d611bef59d",
    "metadata": {},
    "outputs": [],
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "id": "069e176a-e5e1-4566-87c1-d98aa649fd7f",
    "metadata": {},
    "outputs": [],
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 35,
    "id": "84ac3429-5dc2-4197-9242-3f552f9e8553",
    "metadata": {},
    "outputs": [
@@ -235,7 +235,7 @@
        "9                      -       50.33                         53.49  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 36,
    "id": "02658f20-7c93-4371-b746-c4810ffbd2a4",
    "metadata": {},
    "outputs": [
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 37,
    "id": "20c7d9d4-aecd-44b8-81cc-adaca324194e",
    "metadata": {},
    "outputs": [
@@ -381,7 +381,7 @@
        "3               คอลัมน์3    คอลัมน์4                      คอลัมน์5  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 38,
    "id": "25088bcd-0b9d-4cf6-a710-9986d774707e",
    "metadata": {},
    "outputs": [
@@ -479,7 +479,7 @@
        "4   25 กันยายน 2560          -          -      50.58      53.22"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 39,
    "id": "03ba4005-6d16-4566-bfbb-0776c2e26532",
    "metadata": {},
    "outputs": [],
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 40,
    "id": "ffc2f739-9434-437f-a28d-d3b553d70cb0",
    "metadata": {},
    "outputs": [],
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 41,
    "id": "baf3edaf-3374-46a7-9f2a-42dedd2b8057",
    "metadata": {},
    "outputs": [],
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 42,
    "id": "5b3f8f57-15b6-4a72-9a16-c0b3d5c13740",
    "metadata": {},
    "outputs": [],
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 43,
    "id": "3ef03826-0a69-47a3-a628-8c21dc0e5229",
    "metadata": {},
    "outputs": [
@@ -626,7 +626,7 @@
        "2017-09-25    NaN       NaN         50.58                53.22"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 44,
    "id": "101350f0-ca45-43c7-9a85-5529777f39d0",
    "metadata": {},
    "outputs": [
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 45,
    "id": "6b910404-ba76-4c75-9658-bbf2609eb64d",
    "metadata": {},
    "outputs": [],
@@ -727,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 46,
    "id": "0239a8e6-6476-4f20-82f0-6ed46fe445ce",
    "metadata": {},
    "outputs": [],
@@ -738,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 47,
    "id": "63924b0f-23ac-4159-a3a6-1b78a9945102",
    "metadata": {},
    "outputs": [
@@ -826,7 +826,7 @@
        "2017-09-25    NaN       NaN         50.58                53.22"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -838,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 48,
    "id": "e6a072e1-cd39-44fe-9a4c-d21599edde60",
    "metadata": {},
    "outputs": [
@@ -926,7 +926,7 @@
        "2022-10-31   47.0     40.75         47.03                49.47"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -938,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 49,
    "id": "f0667852-4669-41cb-aaf9-9a66011f11e2",
    "metadata": {},
    "outputs": [
@@ -984,7 +984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 50,
    "id": "c1dc9727-134c-46e0-a985-1e25275e2226",
    "metadata": {},
    "outputs": [
@@ -1089,7 +1089,7 @@
        "4         NaN  25.90  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1102,7 +1102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 51,
    "id": "93e2da5c-c3f9-43a2-8e93-91653f302475",
    "metadata": {},
    "outputs": [
@@ -1142,7 +1142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 52,
    "id": "ec45ff0b-8352-4785-a691-7152ce6b0e95",
    "metadata": {},
    "outputs": [
@@ -1154,7 +1154,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1167,7 +1167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 53,
    "id": "48b473bc-a377-47a4-9d29-224319ec25ed",
    "metadata": {},
    "outputs": [
@@ -1239,7 +1239,7 @@
        "2001-01-04          22.3   19.5             23.25    24.30        NaN  26.25"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1271,7 +1271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 54,
    "id": "ec7a0a59-8e31-4ff0-8ef4-fbc8ea66da0d",
    "metadata": {},
    "outputs": [
@@ -1369,7 +1369,7 @@
        "4  10/27/2022  220.5  221.0  223.1  220.0  0.03K   -2.13%"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1382,7 +1382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 55,
    "id": "9b8c5f1e-6c76-44ef-a455-42a6ac0766ea",
    "metadata": {},
    "outputs": [],
@@ -1393,7 +1393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 56,
    "id": "8ccb3346-9043-4e3a-b68f-f7babc77ddd6",
    "metadata": {},
    "outputs": [
@@ -1443,7 +1443,7 @@
        "1  11/01/2022  217.2"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1456,7 +1456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 57,
    "id": "2e3b59e5-7bd0-4781-b1be-8436c1efd20e",
    "metadata": {},
    "outputs": [],
@@ -1468,7 +1468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 58,
    "id": "8f518320-f875-41d9-9efc-b2668c5f28f5",
    "metadata": {},
    "outputs": [
@@ -1535,7 +1535,7 @@
        "2022-11-02  216.0"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1555,7 +1555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 59,
    "id": "c5f939f1-20a9-452d-bc2d-b2b63d2334f2",
    "metadata": {},
    "outputs": [],
@@ -1586,7 +1586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 60,
    "id": "f92cb386-84ea-4c89-a705-f4375c5a32f8",
    "metadata": {},
    "outputs": [
@@ -1614,7 +1614,7 @@
        "      <th>tocom</th>\n",
        "      <th>sicom</th>\n",
        "      <th>jpy</th>\n",
-       "      <th>cny</th>\n",
+       "      <th>sgd</th>\n",
        "      <th>usd</th>\n",
        "      <th>crude_oil</th>\n",
        "    </tr>\n",
@@ -1634,7 +1634,7 @@
        "      <td>224.1</td>\n",
        "      <td>147.8</td>\n",
        "      <td>3.8906</td>\n",
-       "      <td>0.1912</td>\n",
+       "      <td>26.7909</td>\n",
        "      <td>0.0263</td>\n",
        "      <td>85.32</td>\n",
        "    </tr>\n",
@@ -1643,7 +1643,7 @@
        "      <td>225.3</td>\n",
        "      <td>147.5</td>\n",
        "      <td>3.8696</td>\n",
-       "      <td>0.1896</td>\n",
+       "      <td>26.8848</td>\n",
        "      <td>0.0264</td>\n",
        "      <td>87.91</td>\n",
        "    </tr>\n",
@@ -1652,7 +1652,7 @@
        "      <td>220.5</td>\n",
        "      <td>149.9</td>\n",
        "      <td>3.8686</td>\n",
-       "      <td>0.1911</td>\n",
+       "      <td>26.7957</td>\n",
        "      <td>0.0264</td>\n",
        "      <td>89.08</td>\n",
        "    </tr>\n",
@@ -1661,7 +1661,7 @@
        "      <td>214.4</td>\n",
        "      <td>149.9</td>\n",
        "      <td>3.8844</td>\n",
-       "      <td>0.1910</td>\n",
+       "      <td>26.8585</td>\n",
        "      <td>0.0263</td>\n",
        "      <td>87.90</td>\n",
        "    </tr>\n",
@@ -1670,7 +1670,7 @@
        "      <td>215.7</td>\n",
        "      <td>149.9</td>\n",
        "      <td>3.9062</td>\n",
-       "      <td>0.1918</td>\n",
+       "      <td>26.8658</td>\n",
        "      <td>0.0263</td>\n",
        "      <td>86.53</td>\n",
        "    </tr>\n",
@@ -1679,23 +1679,23 @@
        "</div>"
       ],
       "text/plain": [
-       "            tocom  sicom     jpy     cny     usd  crude_oil\n",
-       "date                                                       \n",
-       "2022-10-25  224.1  147.8  3.8906  0.1912  0.0263      85.32\n",
-       "2022-10-26  225.3  147.5  3.8696  0.1896  0.0264      87.91\n",
-       "2022-10-27  220.5  149.9  3.8686  0.1911  0.0264      89.08\n",
-       "2022-10-28  214.4  149.9  3.8844  0.1910  0.0263      87.90\n",
-       "2022-10-31  215.7  149.9  3.9062  0.1918  0.0263      86.53"
+       "            tocom  sicom     jpy      sgd     usd  crude_oil\n",
+       "date                                                        \n",
+       "2022-10-25  224.1  147.8  3.8906  26.7909  0.0263      85.32\n",
+       "2022-10-26  225.3  147.5  3.8696  26.8848  0.0264      87.91\n",
+       "2022-10-27  220.5  149.9  3.8686  26.7957  0.0264      89.08\n",
+       "2022-10-28  214.4  149.9  3.8844  26.8585  0.0263      87.90\n",
+       "2022-10-31  215.7  149.9  3.9062  26.8658  0.0263      86.53"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# merge futures price\n",
-    "related_prices = investing_price(['tocom', 'sicom', 'jpy', 'cny', 'usd', 'crude_oil'])\n",
+    "related_prices = investing_price(['tocom', 'sicom', 'jpy', 'sgd', 'usd', 'crude_oil'])\n",
     "related_prices.tail()"
    ]
   },
@@ -1709,7 +1709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 61,
    "id": "e7ba9dcc-4f35-4963-a6f3-66af04a879e5",
    "metadata": {},
    "outputs": [],
@@ -1720,7 +1720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 62,
    "id": "4536b0f5-e958-4102-8283-08f1f33eaee0",
    "metadata": {},
    "outputs": [],
@@ -1731,7 +1731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 63,
    "id": "ab51eac2-1dac-4e7a-9bd6-b5eabcdc9660",
    "metadata": {},
    "outputs": [],
