add problem statement

--- a/code/EDA.ipynb
+++ b/code/EDA.ipynb
@@ -61,7 +61,12 @@
    "id": "1274ed12-58ac-4f8f-8880-49140cec89c3",
    "metadata": {},
    "source": [
-    "Build model to predict **ribbed smoked sheet** prices next 1 month for estimate trend of prices for Rubber cooperative. Model performance will evaluate by RMSE, Model will deploy if performance better than baseline 10%."
+    "**Goals for Decision Maker**<br>\n",
+    "Rubber cooperative want a model that predict **Ribbed smoked sheet** prices for estimate trend next 1 month for increase chance of success speculate in Ribbed smoked sheet. \n",
+    "\n",
+    "**Goals for Develop Model**<br>\n",
+    "Build model to predict **Ribbed smoked sheet** prices next 1 month to estimate trend of RSS prices for Rubber cooperative. Model performance will evaluate by `MAPE`. <br>\n",
+    "*Model will work in production part if performance better than baseline 5%."
    ]
   },
   {
@@ -77,28 +82,19 @@
    "id": "fbd21e81-8a89-4f74-a206-69bc4765946c",
    "metadata": {},
    "source": [
-    "- explain rubber industry in south\n",
-    "- explain what is rubber and rubber types\n",
-    "- explain why I need to do it\n",
-    "- explain who is my audience\n",
-    "- explain my goal"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a4d33c55-0e79-4732-b118-4d1352e033ca",
-   "metadata": {},
-   "source": [
-    "### Outside Research"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "fa7961a6-24f2-4bad-a8a4-f7a10546a1f6",
-   "metadata": {},
-   "source": [
-    "- find research about rubber price\n",
-    "- find news about industry"
+    "When talking about the largest Rubber market in Thailand, 95% of Thai people would have to say that it is in the South of Thailand.\n",
+    "\n",
+    "Data in year 2000 from the National Statistical Office of Thailand had shown number of totaled households in southern region is 2,900,000 and there are 1,000,000 households that have rubber plantation \n",
+    "Now everyone that own rubber plantation are facing The Rubber price fluctuation which from various events in the world such as \n",
+    "1. Declining demands medical gloves decreasing from unfolding in coronavirus situation\n",
+    "2. Semiconductor chips are in shortage and affect the vehicle industry dramatically curtailing production [source](https://www.thansettakij.com/economy/trade/538589)\n",
+    "\n",
+    "Almost all rubber plantation owners sold their product to Rubber cooperatives.\n",
+    "Rubber cooperatives are also suffering from wrong decision in sold products lower price than it should to be and made them lost because from the Rubber prices fluctuation it make difficult to speculate.\n",
+    "\n",
+    "**Wrong decision** came from chief person which they usually use instinct for making decision and when they wrong many time it make cooperative lack profit and chain to members of cooperative that they will lost dividends and also chain to rubber plantation owners that they will sold products in low price because cooperatives need to cut the purchase price to support themselves.\n",
+    "\n",
+    "Rubber cooperative want to change their instinct-decision to data driven-decision and their first step is hiring junior data scientist to develop a model to predict rubber price for next 1 month to estimate the future trend to increase success rate of speculation."
    ]
   },
   {
@@ -115,15 +111,26 @@
    "metadata": {},
    "source": [
     "Rubber Dataset<br>\n",
-    "Data dict\n",
+    "Data dictionary\n",
     "\n",
-    "variables|meaning|dataset|source|\n",
-    "--|--|--|--|\n",
+    "variables|definition|\n",
+    "--|--|\n",
+    "cup_lump| Cup Lump Price|\n",
+    "rubber_sheet| Rubber Sheet Price|\n",
+    "ribbed_smoked_sheet| Ribbed Smoked Sheet Price|\n",
+    "latex| Latex Price|\n",
+    "fob| Free on Board Rubber Price|\n",
+    "tocom| Japan RSS3 Future Price|\n",
+    "sicom| Singapore RSS3 Future Price|\n",
+    "jpy| 1 Bath convert to Yen|\n",
+    "sgd| 1 Singapore dollar convert to Baht|\n",
+    "usd| 1 Bath convert to USD|\n",
+    "crude_oil| Crude oil Future Price|\n",
     "\n",
     "From \n",
-    "   1. rubber 2560-2565\n",
-    "   2. fob\n",
-    "   3. other prices \n",
+    "   1. [Rubber Prices 2560-2565](http://www.raot.co.th/ewt_news.php?nid=5662&filename=index)\n",
+    "   2. [FOB](http://www.raot.co.th/rubber2012/menu5.php)\n",
+    "   3. [Other Prices](https://www.investing.com/) \n",
     "   \n"
    ]
   },
@@ -2180,6 +2187,82 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "46b03bac-334f-4168-9695-8a62729c0674",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count   1,131.00\n",
+       "mean       40.49\n",
+       "std         6.71\n",
+       "min        27.00\n",
+       "25%        34.20\n",
+       "50%        40.90\n",
+       "75%        47.00\n",
+       "max        53.30\n",
+       "Name: cup_lump, dtype: float64"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# calculate cup lump statistics\n",
+    "rubber['cup_lump'].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "aceca697-286e-4bcf-8ee2-e2825b323b14",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "40.9"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# calculate cup lump median\n",
+    "rubber['cup_lump'].median()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "0b7bd0bb-83e1-45b2-a2ef-35ab356b6f45",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0   36.00\n",
+       "1   48.50\n",
+       "Name: cup_lump, dtype: float64"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# find mode in cup lump\n",
+    "rubber['cup_lump'].mode()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "ea177c58-d732-4d00-8d3e-4c12d96ca36e",
    "metadata": {},
@@ -2205,7 +2288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 27,
    "id": "f91719a2-a590-486f-b1e3-bfdd5c56e1cd",
    "metadata": {},
    "outputs": [
@@ -2285,7 +2368,7 @@
        "2022-12-31 60.76   61.07"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2297,7 +2380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 28,
    "id": "748a8640-2c1c-4775-825a-bdb4f8e5c25d",
    "metadata": {},
    "outputs": [
@@ -2473,7 +2556,7 @@
        "2022-12-31 51.27   51.00"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2485,7 +2568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 71,
    "id": "29a1400e-6c5b-44bd-b7fe-9aef942f5f37",
    "metadata": {},
    "outputs": [
@@ -2513,7 +2596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "id": "33b03f04-f63f-45ea-8a83-ee5bddaecbda",
    "metadata": {},
    "outputs": [],
@@ -2530,7 +2613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "id": "4bfa063f-233c-4a75-a84a-91ae2530859c",
    "metadata": {},
    "outputs": [
@@ -2568,7 +2651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "id": "d513c76d-c8e4-4f52-ab57-d928413f5cce",
    "metadata": {},
    "outputs": [
@@ -2588,7 +2671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "id": "167a3be5-e770-4644-b8a0-795e75c8e1bc",
    "metadata": {},
    "outputs": [
@@ -2608,7 +2691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "id": "5baaf78b-f06b-49d1-b282-4670d37d9112",
    "metadata": {},
    "outputs": [
@@ -2628,7 +2711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "id": "8a183489-56a0-4831-ba07-4917930a81e2",
    "metadata": {},
    "outputs": [
@@ -2657,7 +2740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "id": "c88b2b6b-8846-4f9b-96f3-75269a9734c3",
    "metadata": {},
    "outputs": [
@@ -2694,7 +2777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "id": "17e4ac1d-7e49-4891-afd1-cbb23578fcb7",
    "metadata": {},
    "outputs": [
@@ -2839,7 +2922,7 @@
        "2017-09-25   0.01 -0.82 0.78 -0.56      -0.49  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2860,7 +2943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "id": "68289d6e-5b26-4fda-b8b1-a63a5c5f42f1",
    "metadata": {},
    "outputs": [
@@ -2888,7 +2971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 39,
    "id": "7aa3548f-9964-4bd2-869e-743a90a4dc38",
    "metadata": {},
    "outputs": [
@@ -2908,7 +2991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 40,
    "id": "e1eb18c3-a353-4a9a-9b77-d07cf4d91525",
    "metadata": {},
    "outputs": [
@@ -2946,7 +3029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 41,
    "id": "74ea93ec-239c-4fbf-9f8d-bd6c8950c23b",
    "metadata": {},
    "outputs": [
@@ -2974,7 +3057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 42,
    "id": "b9175eb8-b650-46e7-b512-ba73b2b51c66",
    "metadata": {},
    "outputs": [
@@ -3002,7 +3085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 43,
    "id": "5a1dc25f-2e21-492f-a1ff-4764fd017e64",
    "metadata": {},
    "outputs": [
@@ -3038,7 +3121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 44,
    "id": "5df9820a-c0ac-4649-866d-2f7fb472b782",
    "metadata": {},
    "outputs": [
@@ -3074,7 +3157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 45,
    "id": "95a7c53b-f015-45df-831c-93f5799cd15c",
    "metadata": {},
    "outputs": [
@@ -3104,7 +3187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 46,
    "id": "daf43ca3-f92c-4aa6-a3b1-5f636ef851ed",
    "metadata": {},
    "outputs": [
@@ -3226,7 +3309,7 @@
        "2022-10-31  2022  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3248,7 +3331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 47,
    "id": "2cb45920-0912-412e-9c50-9dff24461f45",
    "metadata": {},
    "outputs": [
@@ -3291,7 +3374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 48,
    "id": "c8158d43-fa01-4b62-a320-c53a154710c0",
    "metadata": {},
    "outputs": [
@@ -3342,7 +3425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 49,
    "id": "b0054c36-770d-4c98-9ad5-6cdbfd245de1",
    "metadata": {},
    "outputs": [],
@@ -3375,7 +3458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 50,
    "id": "9dc1522b-8caf-43df-adcb-5315c606a7ec",
    "metadata": {},
    "outputs": [],
@@ -3421,7 +3504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 51,
    "id": "c994974c-7011-4e73-91cd-b7070c55c9f3",
    "metadata": {},
    "outputs": [
@@ -3442,7 +3525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 52,
    "id": "62a4a99c-0a77-4650-934d-92fe99883cee",
    "metadata": {},
    "outputs": [
@@ -3462,7 +3545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 53,
    "id": "a1fb0170-2504-410f-aa60-36f67e4c57a0",
    "metadata": {},
    "outputs": [
@@ -3483,7 +3566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 54,
    "id": "4366e533-8c74-440b-8edf-556728433780",
    "metadata": {},
    "outputs": [
@@ -3501,7 +3584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 55,
    "id": "8c457d67-199d-4545-8747-cb014a927115",
    "metadata": {},
    "outputs": [
@@ -3535,7 +3618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 56,
    "id": "bd5469d5-008b-4458-a01c-62716afb6846",
    "metadata": {},
    "outputs": [
@@ -3564,7 +3647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 57,
    "id": "fbcf5131-8248-428e-b971-6309787c1592",
    "metadata": {},
    "outputs": [
@@ -3595,7 +3678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 58,
    "id": "9fe9c8ff-4b92-424d-bd64-b4b61c19fd22",
    "metadata": {},
    "outputs": [],
@@ -3614,7 +3697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 59,
    "id": "a93a3244-b02a-4bbb-97bb-c84b95b19584",
    "metadata": {},
    "outputs": [
@@ -3660,7 +3743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 60,
    "id": "f81e90af-91bb-490a-bff1-78b0157b66dd",
    "metadata": {},
    "outputs": [],
