--- a/code/Modeling.ipynb
+++ b/code/Modeling.ipynb
@@ -608,8 +608,16 @@
    "id": "f05c1566-481d-4e54-bd9d-20d2cb1dd47f",
    "metadata": {},
    "source": [
-    "My data doesn't shown up the clear trends in daily form and also does not shown the pattern of seasonality base on PACF and ACF charts. I decided to move up use modern time series model which is [N-Beats]() for help my problem here."
+    "My data doesn't shown up the clear trends in daily form and also does not shown the clear pattern of seasonality base on PACF and ACF charts. I decided to move up use modern time series model which is [N-Beats]() for help my problem here."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ed30e110-a4d9-406d-ad07-2874e1f1eed5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
