--- a/code/nbeats.ipynb
+++ b/code/nbeats.ipynb
@@ -1560,7 +1560,7 @@
     "plt.legend(labels=[\"forecast median price Q50\", \"actual price\"])\n",
     "p.set_ylabel(\"price\")\n",
     "p.set_xlabel(\"\")\n",
-    "p.set_title(\"energy price (test set)\");"
+    "p.set_title(\"rss price (test set)\");"
    ]
   },
   {
@@ -2063,7 +2063,7 @@
     "plt.legend(labels=[\"forecast median price Q50\", \"actual price\"])\n",
     "p.set_ylabel(\"price\")\n",
     "p.set_xlabel(\"\")\n",
-    "p.set_title(\"energy price (test set)\");"
+    "p.set_title(\"rss price preidction\");"
    ]
   },
   {
