--- a/code/scrape.ipynb
+++ b/code/scrape.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# import package\n",
     "from selenium import webdriver\n",
     "from selenium.webdriver.common.by import By\n",
     "from bs4 import BeautifulSoup\n",
@@ -78,49 +79,49 @@
    "source": [
     "for year in tqdm(range(2565, 2566)):\n",
     "    for month in range(1, 11):\n",
-    "        ## set month and year in the left selectbox\n",
-    "        ## target selectboxes has id \"select\" and \"year\"\n",
-    "        ## run JavaScript command\n",
+    "        # set month and year in the left selectbox\n",
+    "        # target selectboxes has id \"select\" and \"year\"\n",
+    "        # run JavaScript command\n",
     "        driver.execute_script(f\"document.getElementById('select').value={month};\")\n",
     "        driver.execute_script(f\"document.getElementById('year').value={year};\")\n",
     "\n",
-    "        ## click the GO button\n",
+    "        # click the GO button\n",
     "        driver.find_element(By.NAME, 'Submit').click()\n",
     "        sleep(3)\n",
     "\n",
-    "        ## convert to BeautifulSoup\n",
-    "        ## this page DOES NOT use utf-8 encoding\n",
+    "        # convert to BeautifulSoup\n",
+    "        # this page DOES NOT use utf-8 encoding\n",
     "        soup = BeautifulSoup(driver.page_source.encode('TIS-620'))\n",
     "\n",
-    "        ## target table has no id, so use CSS selector instead, but structures are not same, e.g.\n",
-    "        ## #ewt_main_structure > tbody > tr:nth-child(2) > td > div > center > table:nth-child(23) -- 2553\n",
-    "        ## #ewt_main_structure > tbody > tr:nth-child(2) > td > div > center > table:nth-child(25) -- 2544\n",
-    "        ## the last table of #ewt_main_structure > tbody > tr:nth-child(2) > td > div > center\n",
+    "        # target table has no id, so use CSS selector instead, but structures are not same, e.g.\n",
+    "        # #ewt_main_structure > tbody > tr:nth-child(2) > td > div > center > table:nth-child(23) -- 2553\n",
+    "        # #ewt_main_structure > tbody > tr:nth-child(2) > td > div > center > table:nth-child(25) -- 2544\n",
+    "        # the last table of #ewt_main_structure > tbody > tr:nth-child(2) > td > div > center\n",
     "        css_selector = \"#ewt_main_structure > tbody > tr:nth-child(2) > td > div > center > table\"\n",
     "        table = soup.select(css_selector)[-1].find('tbody')\n",
     "\n",
-    "        ## first two <tr> are header -> ignore\n",
-    "        ## <tr> of target table MAY contain inner tables, especially later years' structure\n",
-    "        ## so get only 'children' (not grandchildren)\n",
-    "        ## recursive = False\n",
+    "        # first two <tr> are header -> ignore\n",
+    "        # <tr> of target table MAY contain inner tables, especially later years' structure\n",
+    "        # so get only 'children' (not grandchildren)\n",
+    "        # recursive = False\n",
     "        table_rows = table.find_all('tr', recursive=False)\n",
     "        len(table_rows)\n",
     "\n",
-    "        ## iterate rows after 2\n",
-    "        ## final row is mean -> ignore\n",
+    "        # iterate rows after 2\n",
+    "        # final row is mean -> ignore\n",
     "        for row_index in range(2, len(table_rows)-1):\n",
-    "            ## get first column = date\n",
+    "            # get first column = date\n",
     "            date = table_rows[row_index].find('td').text.strip()\n",
-    "            ## iterate each inner-table in the row (len = 6)\n",
+    "            # iterate each inner-table in the row (len = 6)\n",
     "            data_in_row = [convert_date_thai(date)]\n",
-    "            ## for inner-table in table (later years)\n",
+    "            # for inner-table in table (later years)\n",
     "            if len(table_rows[row_index].find_all('table')) != 0:\n",
     "                for inner_table in table_rows[row_index].find_all('table'):\n",
     "                    value = inner_table.find('td').text.strip().strip('?q')\n",
     "                    if value not in  ['', '-']:\n",
     "                        value = float(value)\n",
     "                    data_in_row.append(value)\n",
-    "            ## table with nomal <tr><td>\n",
+    "            # table with nomal <tr><td>\n",
     "            else:\n",
     "                for td in table_rows[row_index].find_all('td'):\n",
     "                    value = inner_table.find('td').text.strip().strip('?q')\n",
@@ -129,7 +130,7 @@
     "                    data_in_row.append(value)\n",
     "            df.loc[len(df)] = data_in_row\n",
     "\n",
-    "        ## browser back\n",
+    "        # browser back\n",
     "        driver.back()"
    ]
   },
